Re-added ability to move test pixel around.

--- a/tools/pixel-finder/coordinate_finder.html
+++ b/tools/pixel-finder/coordinate_finder.html
@@ -143,7 +143,7 @@
               x: <input type="text" value="0" style="width: 80%" id="x_offset"><br />
               y: <input type="text" value="0" style="width: 80%" id="y_offset"><br />
               <button onclick="moveRelative(document.getElementById('x_offset').value*1, document.getElementById('y_offset').value*1)">Move relative</button>
-              <button onclick="moveTestPointRelative();">Move test point relative</button>
+              <button onclick="" id="move_relative_test">Move test point relative</button>
               
               </pre>
             </div>
