Removed ignored files and updated CSS to link images.

--- a/download.html
+++ b/download.html
@@ -9,13 +9,13 @@ title: Download
 <p id="info">Checking status of releases, please wait...</p>
 
 <p id="download_info" style="display: none">
-  <span class="filename" style="background-image: url('http://www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
+  <span class="filename" style="background-image: url('//www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
 </p>
 <p id="download" style="display: none">
     <span id="countdown">Download will start in <span id="cd">10</span> seconds.</span>
     <span id="countdown-after" style="display: none">
       If the download didn't start,
-      <a href="https://github.com/Darker/auto-client/releases/latest" id="dl_link">click here</a>
+      <a href="{{site.gh_repo}}releases/latest" id="dl_link">click here</a>
       to start manually.
     </span>
     <iframe style="width:1px; height: 1px; position:absolute; top:-100px; left: -100px" id="dl_frame"></iframe>
