Put http back to icon images because CDN doesn't support https

--- a/download.html
+++ b/download.html
@@ -9,7 +9,7 @@ title: Download
 <p id="info">Checking status of releases, please wait...</p>
 
 <p id="download_info" style="display: none">
-  <span class="filename" style="background-image: url('//www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
+  <span class="filename" style="background-image: url('http://www.stdicon.com/humility/ddd.zip?size=18');"></span> was updated <span class="time"></span> and downloaded <span class="download_count"></span> times.
 </p>
 <p id="download" style="display: none">
     <span id="countdown">Download will start in <span id="cd">10</span> seconds.</span>
