--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title:
 <h3>Quick links</h3>
 <ul>
   <li><a href="download">Download</a></li>
+  <li><a href="download-beta">Download beta version</a></li>
+  <li><a href="installing">How to install</a></li>
   <li><a href="{{site.gh_repo}}/wiki" target="_blank">Wiki</a></li>
   <li><a href="{{site.gh_repo}}/issues" target="_blank">Report an issue</a></li>
 </ul>
