added link to instructions on download page

--- a/download-beta.html
+++ b/download-beta.html
@@ -4,7 +4,9 @@ title: Download
 download_title: Downloading beta release
 ---
 You're about to download latest testing release of auto-client. Beta releases
-contain newest features and are most updated, but also can contain critical bugs.
+contain newest features and are most updated, but also can contain critical bugs.<br />
+
+Don't forget to read <a href="{{site.baseurl}}/installing">installation instructions</a>.
 
 <script>
 GetDownloadInfo = function(cb) {
