--- a/download.html
+++ b/download.html
@@ -3,4 +3,6 @@ layout: download
 title: Download
 download_title: Downloading stable release
 ---
-You're about to download latest stable release of AutoClient. 
+You're about to download latest stable release of AutoClient.           <br />
+
+Don't forget to read <a href="{{site.baseurl}}/installing">installation instructions</a>.
