improved analytics and added animation to download button

--- a/installing.html
+++ b/installing.html
@@ -5,7 +5,7 @@ title: Instalation instructions
 <section id="help_installing">
   <h3>Download</h3>
   <p>
-    To start download, use the <a href="javascript:void(0);" x-highlight="main_dl_link">download button to the top</a>. If you want to try beta versions
+    To start download, use the <a href="javascript:/*highlight download button*/void(0);" x-highlight="#main_dl_link">download button to the top</a>. If you want to try beta versions
     with cutting-edge features, <a href="{{site.baseurl}}/download-beta">click here.</a>.
   </p>
   <p class="browser-specific firefox">
