added html file to disable ga (/noga) and removed all lambda expressions

--- a/installing.html
+++ b/installing.html
@@ -32,7 +32,7 @@ title: Instalation instructions
 <script>
 
 
-onready(()=>{
+onreadyfunction ((){
   var browser = navigator.userAgent.match(/(firefox|chrome|safari|opera|MSIE)/i);
   if(browser!=null && browser[1]!=null && browser[1].length>0) {
     browser = browser[1].toLowerCase();
