--- a/index.html
+++ b/index.html
@@ -10,3 +10,64 @@ title:
   <li><a href="{{site.gh_repo}}/wiki" target="_blank">Wiki</a></li>
   <li><a href="{{site.gh_repo}}/issues" target="_blank">Report an issue</a></li>
 </ul>
+<h3>Features</h3>
+
+<ol>
+  <li><b>Autoaccept - Accept Blind, ARAM and Normal matches automatically</b>
+     <p class="content">
+       To do this, just press the start button in the program. The program
+       will then start the main AI loop, waiting for buttons to press.     
+     </p>
+  </li>
+  <li><b>Call your lane first</b>
+     <p class="content">
+       The only way to always call your lane and role first. Just enter the role in the “Call text”
+       field. You can also use special scripts for complex call patterns.
+       {% include bigscreenshot.html src="call_text.png" %} 
+     </p>
+  </li>  
+  <li><b>Select your champion first</b>
+     <p class="content">
+       Don't let anyone play with your favorite champion. Program includes suggestions for
+       champion names, but you're free to enter eny text in the first field. However
+       please do not use this feature to <i>instalock</i> - instalocking is very unfair!
+       {% include bigscreenshot.html src="champ.png" %} 
+     </p>
+  </li>  
+  <li><b>Automatically select runes, masteries and summoner spells</b>
+     <p class="content">
+       Tired of forgetting to set the correct mastery and rune page? Don't want to forget to pick
+       smite when jungling? The runes and masteries are indexed by number.
+       {% include bigscreenshot.html src="sum_rum_mas.png" %}
+     </p>
+  </li>
+  <li><b>Save rune, mastery and summoner spell configurations for every champion</b>
+     <p class="content">
+       You don't need to re-configure the program every time you change champion. Just use the save button. Next time you type
+       champion name, your settings will be restored.
+       {% include bigscreenshot.html src="save.png" %}
+     </p>
+  </li>
+  <li><b>Use saved mastery and rune settings for champions in ARAM!</b>
+     <p class="content">
+       The latest feature allows you to use settings you sved for champions you get in ARAM! This
+       means you will no longer end up with wrong masteries in ARAM!
+     </p>
+  </li>
+  <li><b>Enable auto launch PVP.net client</b>
+     <p class="content">
+       Ever been frustrated by waiting for updates to finish, than having to click on "Launch" button? Auto launch feature
+       automatically launches the client when updates are downloaded. It also automatically accepts EULA which is 
+       funny, because this software is not allowed by EULA.
+       {%include youtube_small.html id="3JyLU1HEis8"%} 
+     </p>
+  </li>
+  <li><b>Enable auto login for PVP.net client</b>
+     <p class="content">
+       <b>WARNING: Your password is only 100% secure when it's not saved anywhere.</b> Auto-login feature can automatically enter your
+       password in login form. The password will be encrypted using your Windows SSID. It can still be restored
+       so do NOT use this feature on untrusted computers!
+       {%include youtube_small.html id="YjrcYsx6h1E"%} 
+     </p>
+  </li>
+</ol>
