--- a/installing.html
+++ b/installing.html
@@ -2,6 +2,8 @@
 layout: default
 title: Instalation instructions 
 ---
+
+
 <section id="help_installing">
   <h3>Download</h3>
   <p>
@@ -9,7 +11,7 @@ title: Instalation instructions
     with cutting-edge features, <a href="{{site.baseurl}}/download-beta">click here.</a>.
   </p>
   <p class="browser-specific firefox">
-    To find your downloaded file, press <kbd>Ctrl</kbd>+<kbd>J</kbd> and then click on the folder icon in the popup:
+    To find your downloaded file, press {%include kbd.html keys="Ctrl + J"%} and then click on the folder icon in the popup:
     <img class="big" src="{{site.baseurl}}/images/installing/download-firefox.png" />
   </p>
   
@@ -32,7 +34,7 @@ title: Instalation instructions
 <script>
 
 
-onreadyfunction ((){
+onready(function(){
   var browser = navigator.userAgent.match(/(firefox|chrome|safari|opera|MSIE)/i);
   if(browser!=null && browser[1]!=null && browser[1].length>0) {
     browser = browser[1].toLowerCase();
