Finished script editor, added force HTTP

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@ title:
   </li>
   <li><b>Call your lane first</b>
      <p class="content">
-       The only way to always call your lane and role first. Just enter the role in the “Call text”
-       field. You can also use special scripts for complex call patterns.
+       The only way to always call your lane and role first. Just enter the role in the <q>Call text</q>
+       field. You can also use {%include link text="special scripts for complex call patterns" href="chat_scripts"%}.
        {% include bigscreenshot.html src="call_text.png" %} 
      </p>
   </li>  
   <li><b>Select your champion first</b>
      <p class="content">
        Don't let anyone play with your favorite champion. Program includes suggestions for
-       champion names, but you're free to enter eny text in the first field. However
-       please do not use this feature to <i>instalock</i> - instalocking is very unfair!
+       champion names, but you're free to enter eny text in the first field. <em>However
+       please do not use this feature to <q><i>instalock</i></q> - instalocking is very unfair!</em>
        {% include bigscreenshot.html src="champ.png" %} 
      </p>
   </li>  
@@ -56,7 +56,7 @@ title:
   </li>
   <li><b>Enable auto launch PVP.net client</b>
      <p class="content">
-       Ever been frustrated by waiting for updates to finish, than having to click on "Launch" button? Auto launch feature
+       Ever been frustrated by waiting for updates to finish, than having to click on <q>Launch</q> button? Auto launch feature
        automatically launches the client when updates are downloaded. It also automatically accepts EULA which is 
        funny, because this software is not allowed by EULA.
        {%include youtube_small.html id="3JyLU1HEis8"%} 
@@ -64,7 +64,8 @@ title:
   </li>
   <li><b>Enable auto login for PVP.net client</b>
      <p class="content">
-       <b>WARNING: Your password is only 100% secure when it's not saved anywhere.</b> Auto-login feature can automatically enter your
+       <em>WARNING: Your password is only 100% secure when it's not saved anywhere.</em>
+       Auto-login feature can automatically enter your
        password in login form. The password will be encrypted using your Windows SSID. It can still be restored
        so do NOT use this feature on untrusted computers!
        {%include youtube_small.html id="YjrcYsx6h1E"%} 
