improved structured data

--- a/download.html
+++ b/download.html
@@ -6,8 +6,13 @@ download_title: Downloading stable release
 You're about to download latest stable release of <span itemprop="name">LoL AutoClient</span>.<br />
 Keep in mind although LoL AutoClient is written in java it currently only works on <span itemprop="operatingSystem">Windows</span>
 <link itemprop="applicationCategory" href="http://schema.org/GameApplication"/>
-<div style="font-size: 0pt" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating"><span itemprop="ratingValue">4.9</span> (<span itemprop="ratingCount">2354</span> ratings )</div>
-
+<div style="font-size: 0pt" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+  <span itemprop="ratingValue">4.9</span> (<span itemprop="ratingCount">2354</span> ratings )
+</div>
+<div style="display: none" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+  <meta itemprop="price" content="0.00" />
+  <meta itemprop="priceCurrency" content="USD" />
+</div>
 
 
 Don't forget to read <a href="{{site.baseurl}}/installing">installation instructions</a>.
