--- a/tools/pixel-finder/coordinate_finder.html
+++ b/tools/pixel-finder/coordinate_finder.html
@@ -14,8 +14,13 @@
     #canvases canvas {
       width: 100%;
       display: block;
-      
-      /*height: 100vw;*/ 
+      image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+      image-rendering: -moz-crisp-edges;          /* Firefox                        */
+      image-rendering: -o-crisp-edges;            /* Opera                          */
+      image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+      image-rendering: pixelated; /* Chrome */
+      image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+      -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
     }
      #paste {
        position: absolute;
